# parflow

./: .gitignore  .license-header  Cargo.toml  Dockerfile  LICENSE  README.md  fft.py  rustfmt.toml  test_complete.sh
.cargo/: config.toml
.github/workflows/: ci.yml  data_pipeline.yml  microservice_build.yml
examples/js/: README.md
examples/python/: orchestrator_ctypes.py  test_orchestrator_example.py
parflow-bench/: Cargo.toml
parflow-bench/src/: lib.rs
parflow-c/: Cargo.toml
parflow-c/src/: lib.rs
parflow-cli/: Cargo.toml
parflow-cli/src/: main.rs
parflow-core/: Cargo.toml
parflow-core/src/: lib.rs
parflow-crate-orchestrator/: Cargo.toml
parflow-crate-orchestrator/src/: lib.rs
parflow-grpc/: Cargo.toml  build.rs
parflow-grpc/proto/: parflow.proto
parflow-grpc/src/: main.rs
parflow-grpc/src/proto/: parflow.rs
parflow-kernel-compat/: Cargo.toml
parflow-kernel-compat/src/: lib.rs
parflow-live-client/: Cargo.toml
parflow-live-client/src/: lib.rs
parflow-live-collab/: Cargo.toml
parflow-live-collab/src/: lib.rs
parflow-live-server/: Cargo.toml
parflow-live-server/src/: lib.rs
parflow-mirror/: Cargo.toml
parflow-mirror/examples/: basic_mirroring.rs
parflow-mirror/src/: language_translator.rs  lib.rs  mirroring_engine.rs
parflow-orchestrator/: Cargo.toml
parflow-orchestrator/src/: lib.rs
parflow-rest/: Cargo.toml
parflow-rest/src/: main.rs
parflow-system-optimizer/: Cargo.toml
parflow-system-optimizer/src/: lib.rs
parflow-test-orchestrator/: Cargo.toml
parflow-test-orchestrator/src/: lib.rs
parflow-transpiler/: Cargo.toml
parflow-transpiler/src/: lib.rs
parflow-wasm/: Cargo.toml
parflow-wasm/src/: lib.rs
scripts/: kernel-check.sh  kernel-profile.sh
semantic-compiler/: Cargo.toml
semantic-compiler/examples/: basic_usage.rs
semantic-compiler/src/: cross_language_patterns.rs  lib.rs  pattern_recognizer.rs  semantic_graph.rs
web/: index.html
