[workspace]
members = [
    "parflow-core",
    "parflow-cli", 
    "parflow-bench",
    "parflow-transpiler",
    "parflow-mirror",
    "parflow-orchestrator",
    "parflow-rest",
    "parflow-grpc", 
    "parflow-wasm",
    "parflow-c",
    "parflow-live-server",
    "parflow-live-client",
    "parflow-crate-orchestrator",
    "parflow-test-orchestrator",
    "parflow-system-optimizer",
    "parflow-live-collab",
    "semantic-compiler", "parflow-kernel-compat",
    "parflow-kernel-compat",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
log = "0.4"
num_cpus = "1.16"
page_size = "0.4"
spin = "0.9"
libc = "0.2"
