[package]
name = "parflow-live-collab"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
parflow-kernel-compat = { path = "../parflow-kernel-compat" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
