[package]
name = "semantic-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.14"
blake3 = "1.4"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
anyhow = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
